--- a/sigproc.bib
+++ b/sigproc.bib
@@ -52,7 +52,12 @@
 	ADDRESS = "New York",
 	YEAR = "1978"	}
 
-
+@INPROCEEDINGS{Baccianella10sentiwordnet3.0:,
+    author = {Stefano Baccianella and Andrea Esuli and Fabrizio Sebastiani},
+    title = {SentiWordNet 3.0: An Enhanced Lexical Resource for Sentiment Analysis and Opinion Mining},
+    booktitle = {in Proc. of LREC},
+    year = {2010}
+}
 
 
 
