--- a/LatexPosterTemplate.tex
+++ b/LatexPosterTemplate.tex
@@ -158,7 +158,7 @@ In the introduction section, you should describe the open problem and motivation
 
 In order to perform sentiment analysis, two approaches were taken: using SentiWordNet scores and SVM machine learning based on ratings.
 
-SVM use in sentiment analysis has proven to be more effective than other forms of machine learning [citation needed].  When preprocessing input for an SVM, it is helpful to use WordNet lemmas.  WordNet is a lexical resource that groups English words into synonym sets, and words are tagged by part of speech.  To normalize the input, term frequency–inverse document frequency (tfidf) can be used.  To reduce dimensionality, latent semantic analysis (LSA), which uses singular value decomposistion, can be used.
+SVM use in sentiment analysis has proven to be more effective than other forms of machine learning [citation needed].  When preprocessing input for an SVM, it is helpful to use WordNet lemmas.  WordNet is a lexical resource that groups English words into synonym sets, and words are tagged by part of speech.  To normalize the input, term frequency–inverse document frequency (tf-idf) can be used.  To reduce dimensionality, latent semantic analysis (LSA), which uses singular value decomposition, can be used.
 
 SentiWordNet is a dataset that assigns a sentiment score to members of WordNet.  Sentiment scores were generated using the structure of WordNet as well as the Princeton WordNet Gloss Corpus.
 
