--- a/sigproc.bib
+++ b/sigproc.bib
@@ -1,64 +1,51 @@
-@ARTICLE{bowman:reasoning,
-	AUTHOR = "Mic Bowman and Saumya K. Debray and Larry L. Peterson",
-	TITLE = "Reasoning About Naming Systems",
-	JOURNAL = "ACM Trans. Program. Lang. Syst.",
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {795-825},
-	MONTH = "November",
-	YEAR = {1993}	}
-
-@ARTICLE{braams:babel,
-	AUTHOR = "Johannes Braams",
-	TITLE = "Babel, a Multilingual Style-Option System for Use with LaTeX's Standard Document Styles",
-	JOURNAL = {TUGboat},
-	VOLUME = {12},
-	NUMBER = {2},
-	PAGES = {291-301},
-	MONTH = "June",
-	YEAR = {1991}	}
-
-@INPROCEEDINGS{clark:pct,
-	AUTHOR = "Malcolm Clark",
-	TITLE = "Post Congress Tristesse",
-	BOOKTITLE = "TeX90 Conference Proceedings",
-	PAGES = "84-89",
-	ORGANIZATION = "TeX Users Group",
-	MONTH = "March", 
-	YEAR = {1991}	}
-
-@ARTICLE{herlihy:methodology,
-	AUTHOR = "Maurice Herlihy",
-	TITLE = "A Methodology for Implementing Highly Concurrent
-	Data Objects",
-	JOURNAL = {ACM Trans. Program. Lang. Syst.},
-	VOLUME = {15},
-	NUMBER = {5},
-	PAGES = {745-770},
-	MONTH = "November",
-	YEAR = {1993}	}
-
-@BOOK{Lamport:LaTeX,
-	AUTHOR = "Leslie Lamport",
-	TITLE = "LaTeX User's Guide and Document Reference Manual",
-	PUBLISHER = "Addison-Wesley Publishing Company",
-	ADDRESS = "Reading, Massachusetts",
-	YEAR = "1986"	}
-
-@BOOK{salas:calculus,
-	AUTHOR = "S.L. Salas and Einar Hille",
-	TITLE = "Calculus: One and Several Variable",
-	PUBLISHER = "John Wiley and Sons",
-	ADDRESS = "New York",
-	YEAR = "1978"	}
-
-@INPROCEEDINGS{Baccianella10sentiwordnet3.0:,
+@INPROCEEDINGS{Baccianella10sentiwordnet,
     author = {Stefano Baccianella and Andrea Esuli and Fabrizio Sebastiani},
     title = {SentiWordNet 3.0: An Enhanced Lexical Resource for Sentiment Analysis and Opinion Mining},
     booktitle = {in Proc. of LREC},
     year = {2010}
 }
 
+@INPROCEEDINGS{Pang02thumbsup,
+    author = {Bo Pang and Lillian Lee and Shivakumar Vaithyanathan},
+    title = {Thumbs up? Sentiment Classification using Machine Learning Techniques},
+    booktitle = {IN PROCEEDINGS OF EMNLP},
+    year = {2002},
+    pages = {79--86},
+    publisher = {}
+}
 
+@INPROCEEDINGS{Mullen04sentimentanalysis,
+    author = {Tony Mullen and Nigel Collier},
+    title = {Sentiment analysis using support vector machines with diverse information sources},
+    booktitle = {In Proceedings of Conference on Empirical Methods in Natural Language Processing},
+    year = {2004}
+}
 
+@article{Miller,
+ author = {Miller, George A.},
+ title = {WordNet: A Lexical Database for English},
+ journal = {Commun. ACM},
+ issue_date = {Nov. 1995},
+ volume = {38},
+ number = {11},
+ month = nov,
+ year = {1995},
+ issn = {0001-0782},
+ pages = {39--41},
+ numpages = {3},
+ url = {http://doi.acm.org/10.1145/219717.219748},
+ doi = {10.1145/219717.219748},
+ acmid = {219748},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
 
+@ARTICLE{Deerwester90indexingby,
+    author = {Scott Deerwester and Susan T. Dumais and George W. Furnas and Thomas K. Landauer and Richard Harshman},
+    title = {Indexing by latent semantic analysis},
+    journal = {JOURNAL OF THE AMERICAN SOCIETY FOR INFORMATION SCIENCE},
+    year = {1990},
+    volume = {41},
+    number = {6},
+    pages = {391--407}
+}
