--- a/LatexPosterTemplate.tex
+++ b/LatexPosterTemplate.tex
@@ -180,8 +180,11 @@ Results were compared to another approach to sentiment analysis: using a support
 
 The advantage of the SVM approach is that it potentially handles domain-specific factors better, but it is also potentially non-extensible to comments of applications outside of the training set.  However, in this project, comments for the training set were taken from all applications, and the purpose of performing semantic analysis was primarily to classify the sentiments of the more neutrally-rate comments (2-4 stars).
 
+\subsection{Application Metric Comparison}
+Several metrics dealing with application quality are directly available from Google Play.  This includes approximate number of downloads, average 1-5 star rating, and whether the developer is a Top Developer.  In order to determine which metrics are useful in a rating system, these different metrics are compared across the top-downloaded applications, and we determine if there is any correlation.
+
 \section{Results and Application}
-There are many potential applications for this calculated sentiment score. One particularly interesting applicaton is developer rating: using the aggregate sentiment scores of the applications created by a developer, we can generate a generalized ``reputation'' score that will attempt to measure the reliability of the developer.
+There are many potential applications for the calculated sentiment score and other available metrics. One particularly interesting applicaton is developer rating: using the aggregate sentiment scores of the applications created by a developer, we can generate a generalized ``reputation'' score that will attempt to measure the reliability of the developer.
 
  This reputation score will provide much needed information about developer reliability which can be a dramatic improvement over the existing information. To elaborate, the Google Play store designates certain developers as ``Top Developers'' which is indicated via badges. However, being a ``Top Developer'' does not indicate that the developer has written a large number of apps or even that the apps are of good quality.
 \pagebreak
@@ -194,6 +197,7 @@ There are many potential applications for this calculated sentiment score. One p
 
 \subsection{Results}
 %Provide an overview of results.  Use tables or figures as appropriate.  Place Tables/Figures/Images in text as close to the reference as possible, typically at the top of a column (see Figure~\ref{fig:myfig}).
+For the sentiment analysis score, the SentiWordNet technique correlates with overall app rating more than the SVM technique does.  For predicting the sentiment of one- and five-star comments, the SVM technique is more accurate.
 
 \begin{figure}[!h]
 \centering
@@ -211,6 +215,16 @@ There are many potential applications for this calculated sentiment score. One p
 \label{fig:myfig2}
 \end{figure}
 
+\begin{table}
+\centering
+\caption{Accuracy of 1 and 5 star sentiment predictions}
+\begin{tabular}{|c|c|}
+\hline
+& \textbf{Accuracy} \\ \hline
+SVM & 0.735 \\ \hline
+SentiWordNet & 0.709 \\ \hline
+\end{tabular}
+\end{table}
 
 \subsection{Contributions}
 
