--- a/sigproc.bib
+++ b/sigproc.bib
@@ -21,6 +21,22 @@
     year = {2004}
 }
 
+@INPROCEEDINGS{Pandita:2013:WTA:2534766.2534812,
+ author = {Pandita, Rahul and Xiao, Xusheng and Yang, Wei and Enck, William and Xie, Tao},
+ title = {WHYPER: Towards Automating Risk Assessment of Mobile Applications},
+ booktitle = {Proceedings of the 22Nd USENIX Conference on Security},
+ series = {SEC'13},
+ year = {2013},
+ isbn = {978-1-931971-03-4},
+ location = {Washington, D.C.},
+ pages = {527--542},
+ numpages = {16},
+ url = {http://dl.acm.org/citation.cfm?id=2534766.2534812},
+ acmid = {2534812},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+
 @article{Miller,
  author = {Miller, George A.},
  title = {WordNet: A Lexical Database for English},
