fixed table formatting

--- a/LatexPosterTemplate.tex
+++ b/LatexPosterTemplate.tex
@@ -215,7 +215,7 @@ For the sentiment analysis score, the SentiWordNet technique correlates with ove
 \label{fig:myfig2}
 \end{figure}
 
-\begin{table}
+\begin{table}[!h]
 \centering
 \caption{Accuracy of 1 and 5 star sentiment predictions}
 \begin{tabular}{|c|c|}
