--- a/LatexPosterTemplate.tex
+++ b/LatexPosterTemplate.tex
@@ -49,7 +49,7 @@
 
 \begin{document}
 
-\title{}
+\title{An Evaluation of Potential Reputation System Metrics for Android Applications and Application Developers}
 %
 % You need the command \numberofauthors to handle the 'placement
 % and alignment' of the authors beneath the title.
@@ -188,7 +188,7 @@ Several metrics dealing with application quality are directly available from Goo
 \section{Results and Application}
 There are many potential applications for the calculated sentiment score and other available metrics. One particularly interesting application is developer rating: using the aggregate sentiment scores of the applications created by a developer, we can generate a generalized ``reputation'' score that will attempt to measure the reliability of the developer.
 
- This reputation score will provide much needed information about developer reliability which can be a dramatic improvement over the existing information. To elaborate, the Google Play store designates certain developers as ``Top Developers'' which is indicated via badges. However, being a ``Top Developer'' does not indicate that the developer has written a large number of apps or even that the apps are of good quality.
+This reputation score will provide much needed information about developer reliability which can be a dramatic improvement over the existing information. To elaborate, the Google Play store designates certain developers as ``Top Developers'' which is indicated via badges. However, being a ``Top Developer'' does not indicate that the developer has written a large number of apps or even that the apps are of good quality.
 %\pagebreak
 \begin{figure}[!h]
 \centering
