--- a/LatexPosterTemplate.tex
+++ b/LatexPosterTemplate.tex
@@ -164,7 +164,7 @@ difficult for users to sift through reviews in order to determine how other user
 
 In order to perform sentiment analysis, two approaches were taken: using SentiWordNet scores, and a support vector machine trained with star ratings.
 
-Support Vector Machine (SVM) use in sentiment analysis has proven to be an effective approach to sentiment analysis, in comparison with other machine learning techniques \cite{Pang02thumbsup}.  When preprocessing input for an SVM, it is helpful to use WordNet lemmas.  WordNet is a lexical resource that groups English words into synonym sets, and words are tagged by part of speech \cite{Miller}.  To normalize the input, term frequency-inverse document frequency (tf-idf) can be used.  To reduce dimensionality, latent semantic analysis (LSA), which uses singular value decomposistion, can be used \cite{Deerwester90indexingby}.  This follows a simiar approach as \cite{Mullen04sentimentanalysis}
+Support Vector Machine (SVM) use in sentiment analysis has proven to be an effective approach to sentiment analysis, in comparison with other machine learning techniques \cite{Pang02thumbsup}.  When preprocessing input for an SVM, it is helpful to use WordNet lemmas.  WordNet is a lexical resource that groups English words into synonym sets, and words are tagged by part of speech \cite{Miller}.  To normalize the input, term frequency-inverse document frequency (tf-idf) can be used.  To reduce dimensionality, latent semantic analysis (LSA), which uses singular value decomposition, can be used \cite{Deerwester90indexingby}.  This follows a similar approach as \cite{Mullen04sentimentanalysis}.
 
 SentiWordNet is a dataset that assigns a sentiment score to members of WordNet.  Sentiment scores were generated using the structure of WordNet as well as the Princeton WordNet Gloss Corpus \cite{Baccianella10sentiwordnet}.
 
@@ -230,7 +230,7 @@ SentiWordNet & 0.709 \\ \hline
 This work contributes to the study of reputation systems by taking a critical look at the quality of various metrics.
 \begin{itemize}
 \item{We have compared existing sentiment analysis techniques, and evaluated their effectiveness for predicting the aggregate sentiment of an application from multiple reviews.}
-\item{We have investigated corrrelations between multiple metrics that determine the quality of an application, which can be used to determine the overall quality of an application of an application developer.}
+\item{We have investigated correlations between multiple metrics that determine the quality of an application, which can be used to determine the overall quality of an application of an application developer.}
 \end{itemize}
 
 % The following two commands are all you need in the
